--- a/REST_API_PRACTICE_ALPHAVANTAGE.ipynb
+++ b/REST_API_PRACTICE_ALPHAVANTAGE.ipynb
@@ -4611,9 +4611,9 @@
     "\n",
     "print(df)\n",
     "\n",
-    "df.to_csv(r'''C:\\Users\\groldan\\REST_API_PRACTICE_ALPHAVANTAGE_PRICELIST.csv''', sep=',', index=False)\n",
+    "df.to_csv(r'''C:\\Users\\xxxxx\\REST_API_PRACTICE_ALPHAVANTAGE_PRICELIST.csv''', sep=',', index=False)\n",
     "\n",
-    "df.to_excel(r'C:\\Users\\groldan\\REST_API_PRACTICE_ALPHAVANTAGE_PRICELIST.xlsx', sheet_name='Pricelist', index=False)\n",
+    "df.to_excel(r'C:\\Users\\xxxxx\\REST_API_PRACTICE_ALPHAVANTAGE_PRICELIST.xlsx', sheet_name='Pricelist', index=False)\n",
     "\n",
     "\n",
     "\n"
